regroup the app

--- a/app/_pages/bedrijfsoptredens/index.html
+++ b/app/_pages/bedrijfsoptredens/index.html
@@ -30,7 +30,7 @@ permalink: "/bedrijfsoptredens/"
 	</article>
 </section>
 
-{% include _blocks/video.html %}
+{% include block/block.video.html %}
 
 
 <!-- block usp -->
@@ -55,9 +55,9 @@ permalink: "/bedrijfsoptredens/"
 	</article>
 </section>
 
-{% include _blocks/testimonials.html %}
+{% include block/block.testimonials.html %}
 
-{% include _blocks/optredens.html %}
+{% include block/block.optredens.html %}
 
 <!-- block usp -->
 <section class="block usps">
@@ -73,6 +73,6 @@ permalink: "/bedrijfsoptredens/"
 	</article>
 </section>
 
-{% include _blocks/counter.html %}
+{% include block/block.counter.html %}
 
-{% include _blocks/contactform.html %}
+{% include block/block.contactform.html %}
