--- a/app/_pages/theaterproducties/index.html
+++ b/app/_pages/theaterproducties/index.html
@@ -30,7 +30,7 @@ permalink: "/theaterproducties/"
 	</article>
 </section>
 
-{% include _blocks/video.html %}
+{% include block/block.video.html %}
 
 <!-- block usp -->
 <section class="block usps">
@@ -50,6 +50,6 @@ permalink: "/theaterproducties/"
 </section>
 
 
-{% include _blocks/counter.html %}
+{% include block/block.counter.html %}
 
-{% include _blocks/contactform.html %}
+{% include block/block.contactform.html %}
