--- a/app/_pages/trouwambtenaar/index.html
+++ b/app/_pages/trouwambtenaar/index.html
@@ -39,7 +39,7 @@ permalink: "/trouwambtenaar/"
 	</article>
 </section>
 
-{% include _blocks/video.html %}
+{% include block/block.video.html %}
 
 <!-- block usp -->
 <section class="block usps">
@@ -63,7 +63,7 @@ permalink: "/trouwambtenaar/"
 	</article>
 </section>			
 
-{% include _blocks/testimonials.html %}
+{% include block/block.testimonials.html %}
 
 
 <!-- block usp -->
@@ -83,6 +83,6 @@ permalink: "/trouwambtenaar/"
 </section>
 
 
-{% include _blocks/counter.html %}
+{% include block/block.counter.html %}
 
-{% include _blocks/contactform.html %}
+{% include block/block.contactform.html %}
