--- a/trouwambtenaar.html
+++ b/trouwambtenaar.html
@@ -1025,16 +1025,14 @@ Nogmaals bedankt was echt te gek!"</blockquote>
   </div>
 </div>
 
-<script>
+<!-- <script>
 	function trackButton(e) {
     e.preventDefault();
-    console.log('tracker');
     
 		return gtag_report_conversion('https://jellekuiper.nl/trouwambtenaar');
   }
   document.getElementsByClassName('google-tracker')[0].addEventListener("click", trackButton);
-</script>
-
+</script> -->
 
 </main>
 
