--- a/theaterproducties/buurman-en-buurman.html
+++ b/theaterproducties/buurman-en-buurman.html
@@ -1,67 +1,80 @@
 <!doctype html>
 <html lang="nl/nl">
   <head>
-	<title>Jelle Kuiper | Buurman & Buurman</title>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="UTF-8">
-	<meta name="HandheldFriendly" content="True">
-	<meta name="author" content="jellekuiper">
-	<meta name="description" content="Jelle Kuiper, de leukste trouwambtenaar, cabaretier en theaterproducent.">
-	<meta name="keywords" content="Jelle Kuiper, de leukste trouwambtenaar, cabaretier en theaterproducent.">
-	<meta name="MobileOptimized" content="320">
-	<meta name="robots" content="index, follow" />
-	<meta name="last-modified" content="Sun, 3 Sep 2017 14:00:46 GMT " />
-	<meta name="cache-control" content="Private" />
-	<meta name="Expires" content="600" />
-	<link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml" />
+  <title>Jelle Kuiper | Buurman & Buurman</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta name="HandheldFriendly" content="True">
+  <meta name="author" content="jellekuiper">
+  <meta name="description" content="Jelle Kuiper, de leukste trouwambtenaar, cabaretier en theaterproducent.">
+  <meta name="keywords" content="Jelle Kuiper, de leukste trouwambtenaar, cabaretier en theaterproducent.">
+  <meta name="MobileOptimized" content="320">
+  <meta name="robots" content="index, follow" />
+  <meta name="last-modified" content="Sun, 3 Sep 2017 14:00:46 GMT " />
+  <meta name="cache-control" content="Private" />
+  <meta name="Expires" content="600" />
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml" />
 
-	<!-- Favicons -->
-	<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
-	<link rel="manifest" href="/assets/favicons/site.webmanifest">
-	<link rel="mask-icon" href="/assets/favicons/safari-pinned-tab.svg" color="#5bbad5">
-	<link rel="shortcut icon" href="/assets/favicons/favicon.ico">
-	<meta name="msapplication-TileColor" content="#2d89ef">
-	<meta name="msapplication-config" content="/assets/favicons/browserconfig.xml">
-	<meta name="theme-color" content="#ffffff">
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
+  <link rel="manifest" href="/assets/favicons/site.webmanifest">
+  <link rel="mask-icon" href="/assets/favicons/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="/assets/favicons/favicon.ico">
+  <meta name="msapplication-TileColor" content="#2d89ef">
+  <meta name="msapplication-config" content="/assets/favicons/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
 
-	<!-- OG -->
-	<meta property="og:title" content="de leukste trouwambtenaar, cabaretier en theaterproducent.">
-	<meta property="og:description" content="Jelle Kuiper, de leukste trouwambtenaar, cabaretier en theaterproducent.">
-	<meta property="og:image" content="https://jellekuiper.nl/assets/img/theaterproducties/buurman_en_buurman/Bedrijfsoptreden-buurmanbuurman-Jelle-Kuiper-3.jpg">
-	<meta property="og:image:width" content="" />
-	<meta property="og:image:height" content="" />
-	<meta property="og:url" content="https://jellekuiper.nl/theaterproducties/buurman-en-buurman">
-	<meta property="og:type" content="website">
-	<meta property="og:site_name" content="jellekuiper">
-	<meta name="twitter:site" content="@Jelle_Kuiper" />
-	<meta name="twitter:creator" content="@Jelle_Kuiper" />
-	<meta name="twitter:site" content="@Jelle_Kuiper" />
-	<meta name="twitter:card" content="summary_large_image" />
+  <!-- OG -->
+  <meta property="og:title" content="de leukste trouwambtenaar, cabaretier en theaterproducent.">
+  <meta property="og:description" content="Jelle Kuiper, de leukste trouwambtenaar, cabaretier en theaterproducent.">
+  <meta property="og:image" content="https://jellekuiper.nl/assets/img/theaterproducties/buurman_en_buurman/Bedrijfsoptreden-buurmanbuurman-Jelle-Kuiper-3.jpg">
+  <meta property="og:image:width" content="" />
+  <meta property="og:image:height" content="" />
+  <meta property="og:url" content="https://jellekuiper.nl/theaterproducties/buurman-en-buurman">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="jellekuiper">
+  <meta name="twitter:site" content="@Jelle_Kuiper" />
+  <meta name="twitter:creator" content="@Jelle_Kuiper" />
+  <meta name="twitter:site" content="@Jelle_Kuiper" />
+  <meta name="twitter:card" content="summary_large_image" />
 
   <!-- Global site tag (gtag.js) - Google AdWords: 960541273 -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-960541273"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'AW-960541273');
   </script>
-  
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
 
-	
-	<!-- Event snippet for Aanvraagformulier conversion page In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
-	<script> function gtag_report_conversion(url) { var callback = function () { if (typeof(url) != 'undefined') { window.location = url; } }; gtag('event', 'conversion', { 'send_to': 'AW-960541273/LvODCLWv-HsQ2eSCygM', 'event_callback': callback }); return false; } </script>
 
-	<!-- local storage fonts -->
-	<script type="text/javascript">!function(){"use strict";function e(e,t,n){e.addEventListener?e.addEventListener(t,n,!1):e.attachEvent&&e.attachEvent("on"+t,n)}function t(e){return window.localStorage&&localStorage.local_storage_font&&localStorage.local_storage_font_file===e}function n(){if(window.localStorage&&window.XMLHttpRequest)if(t(o))c(localStorage.local_storage_font);else{var n=new XMLHttpRequest;n.open("GET",o,!0),e(n,"load",function(){4===n.readyState&&(c(n.responseText),localStorage.local_storage_font=n.responseText,localStorage.local_storage_font_file=o)}),n.send()}else{var a=document.createElement("link");a.href=o,a.rel="stylesheet",a.type="text/css",document.getElementsByTagName("head")[0].appendChild(a),document.cookie="local_storage_font"}}function c(e){var t=document.createElement("style");t.innerHTML=e,document.getElementsByTagName("head")[0].appendChild(t)}var o="/assets/css/fonts.css";window.localStorage&&localStorage.local_storage_font||document.cookie.indexOf("local_storage_font")>-1?n():e(window,"load",n)}();</script><noscript><link rel="stylesheet" href="/assets/css/fonts.css" async defer></noscript>
+  <!-- Event snippet for Aanvraagformulier conversion page In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+  <script>
+    function gtag_report_conversion(url) {
+      var callback = function () {
+        if (typeof (url) != 'undefined') {
+          // window.location = url; 
+        }
+      };
+      gtag('event', 'conversion', { 'send_to': 'AW-960541273/LvODCLWv-HsQ2eSCygM', 'event_callback': callback }); return false;
+    } 
+  </script>
 
-	<!-- includes -->
-	<link rel="stylesheet" type="text/css" href="/assets/css/stylesheet.css" async defer>
-	<script type="text/javascript" src="/assets/js/build.js" defer></script>
+  <!-- local storage fonts -->
+  <script
+    type="text/javascript">!function () { "use strict"; function e(e, t, n) { e.addEventListener ? e.addEventListener(t, n, !1) : e.attachEvent && e.attachEvent("on" + t, n) } function t(e) { return window.localStorage && localStorage.local_storage_font && localStorage.local_storage_font_file === e } function n() { if (window.localStorage && window.XMLHttpRequest) if (t(o)) c(localStorage.local_storage_font); else { var n = new XMLHttpRequest; n.open("GET", o, !0), e(n, "load", function () { 4 === n.readyState && (c(n.responseText), localStorage.local_storage_font = n.responseText, localStorage.local_storage_font_file = o) }), n.send() } else { var a = document.createElement("link"); a.href = o, a.rel = "stylesheet", a.type = "text/css", document.getElementsByTagName("head")[0].appendChild(a), document.cookie = "local_storage_font" } } function c(e) { var t = document.createElement("style"); t.innerHTML = e, document.getElementsByTagName("head")[0].appendChild(t) } var o = "/assets/css/fonts.css"; window.localStorage && localStorage.local_storage_font || document.cookie.indexOf("local_storage_font") > -1 ? n() : e(window, "load", n) }();</script>
+  <noscript>
+    <link rel="stylesheet" href="/assets/css/fonts.css" async defer>
+  </noscript>
+
+  <!-- includes -->
+  <link rel="stylesheet" type="text/css" href="/assets/css/stylesheet.css" async defer>
+  <script type="text/javascript" src="/assets/js/build.js" defer></script>
 </head>
   <body class="body detailpage">
     <header class="header">
