--- a/trouwambtenaar.html
+++ b/trouwambtenaar.html
@@ -142,14 +142,16 @@
 </div>
 
 <main>
-	
-<div class="block video">
+	<!-- TODO:: UNCOMMENT AND REPLACE VIDEO -->
+<!-- 
+
+<div class="block video" id="">
   <div class="inner">
     
-	<iframe class="iframe" width="100%" height="100%" src="https://www.youtube.com/embed/sQZcXToH1CU?vq=hd720&amp;modestbranding=1&amp;showinfo=0&amp;controls=0&amp;autoplay=0&amp;rel=0&amp;theme=light" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+	<iframe class="iframe" width="100%" height="100%" src="https://www.youtube.com/embed/sQZcXToH1CU?vq=hd720&modestbranding=1&showinfo=0&controls=0&autoplay=0&rel=0&theme=light" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
   </div>
-</div>
+</div> -->
 
 <!-- block usp -->
 <section class="block usps">
